<resources>
    <string name="app_name">Watatap</string>
    <string name="btn_ViewHistory">History</string>
    <string name="btn_ViewCurrentData">Live Data</string>
    <string name="btn_back">Back</string>
    <string name="btn_On">On</string>
    <string name="btn_Off">Off</string>
    <string name="btn_Settings">Settings</string>
    <string name="lbl_act_settings">SETTINGS</string>

    <string name="txt_live_data_header">LIVE DATA</string>
    <string name="txt_ph_level">pH Level</string>
    <string name="txt_turbidity">Turbidity</string>
    <string name="txt_water_consumption">Water Consumption</string>
    <string name="txt_water_level_threshold">Water Level Threshold</string>
    <string name="txt_leakage_amount_a">Leakage Amount A</string>
    <string name="txt_leakage_amount_b">Leakage Amount B</string>
    <string name="txt_liters">Liters</string>
    <string name="btn_main_valve">Main Valve</string>
    <string name="btn_overheadvalve">Overhead Valve</string>
    <string name="txt_city">City</string>
    <string name="txt_barangay">Barangay</string>
    <string name="txt_setthreshold">SET THRESHOLD</string>
    <string name="btn_save">SAVE THRESHOLD</string>
</resources>