<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/watatap_bg"
    tools:context=".Menu">

    <TextView
        android:id="@+id/appname"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/app_name"
        android:gravity="center"
        android:textColor="@color/black"
        android:autoSizeTextType="uniform"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLiveData"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="MissingConstraints"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLiveData"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_ViewCurrentData"
        android:gravity="center"
        android:textColor="@color/black"
        android:autoSizeTextType="none"
        android:background="@drawable/menu_buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_ViewHistory"
        android:gravity="center"
        android:textColor="@color/black"
        android:autoSizeTextType="none"
        android:background="@drawable/menu_buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="20px"
        app:layout_constraintTop_toBottomOf="@id/btnLiveData"
        tools:ignore="MissingConstraints"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSettings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_Settings"
        android:gravity="center"
        android:textColor="@color/black"
        android:autoSizeTextType="none"
        android:background="@drawable/menu_buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="20px"
        app:layout_constraintTop_toBottomOf="@id/btnHistory"
        tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>