<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/watatap_bg"
    tools:context=".LiveData">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_back"
        android:background="@drawable/btn_live_data"
        android:textColor="@color/watatap_btn_bg"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintWidth_percent="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_ViewHistory"
        android:background="@drawable/btn_live_data"
        android:textColor="@color/watatap_btn_bg"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/appname"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/app_name"
        android:gravity="center"
        android:textColor="@color/black"
        android:autoSizeTextType="uniform"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="1"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/livedataheader"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/txt_live_data_header"
        android:gravity="center"
        android:textColor="@color/black"
        android:autoSizeTextType="uniform"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appname"

        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintWidth_percent="1"
        android:layout_marginTop="50px"
        tools:ignore="MissingConstraints"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25px"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/livedataheader"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/txt_phlevel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/txt_ph_level"
            android:gravity="right|center_vertical"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black"
            android:background="@drawable/live_data"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/txt_value_phlevel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="left|center_vertical"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black"
            android:background="@drawable/live_data"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/txt_turbidity"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/txt_turbidity"
            android:gravity="right|center_vertical"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black"
            android:background="@drawable/live_data"
            app:layout_constraintTop_toBottomOf="@id/txt_phlevel"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/txt_value_turbidity"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="left|center_vertical"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black"
            android:background="@drawable/live_data"
            app:layout_constraintTop_toBottomOf="@id/txt_value_phlevel"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/txt_waterconsumption"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/live_data"
            android:text="@string/txt_water_consumption"
            android:gravity="right|center_vertical"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/txt_turbidity"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/txt_value_waterconsumption"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="left|center_vertical"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black"
            android:background="@drawable/live_data"
            app:layout_constraintTop_toBottomOf="@id/txt_value_turbidity"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/txt_waterlevelthreshold"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/txt_water_level_threshold"
            android:gravity="right|center_vertical"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black"
            android:background="@drawable/live_data"
            app:layout_constraintTop_toBottomOf="@id/txt_waterconsumption"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/txt_value_waterlevelthreshold"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="left|center_vertical"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black"
            android:background="@drawable/live_data"
            app:layout_constraintTop_toBottomOf="@id/txt_value_waterconsumption"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/txt_leakageamount"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/txt_leakage_amount"
            android:gravity="right|center_vertical"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black"
            android:background="@drawable/live_data"
            app:layout_constraintTop_toBottomOf="@id/txt_waterlevelthreshold"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/txt_value_leakageamount"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="left|center_vertical"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black"
            android:background="@drawable/live_data"
            app:layout_constraintTop_toBottomOf="@id/txt_value_waterlevelthreshold"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/txt_liters"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/txt_liters"
            android:gravity="right|center_vertical"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black"
            android:background="@drawable/live_data"
            app:layout_constraintTop_toBottomOf="@id/txt_leakageamount"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/txt_value_liters"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="left|center_vertical"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black"
            android:background="@drawable/live_data"
            app:layout_constraintTop_toBottomOf="@id/txt_value_leakageamount"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/txt_mainvalve"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_main_valve"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black"
            android:background="@drawable/live_data"
            android:layout_marginTop="75px"
            app:layout_constraintTop_toBottomOf="@id/txt_liters"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints"/>

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/mainvalve_switch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintTop_toBottomOf="@id/txt_mainvalve"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/txt_overheadvalve"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_overheadvalve"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black"
            android:background="@drawable/live_data"
            android:layout_marginTop="75px"
            app:layout_constraintTop_toBottomOf="@id/txt_value_liters"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints"/>

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/overheadvalve_switch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintTop_toBottomOf="@id/txt_overheadvalve"
            app:layout_constraintRight_toRightOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>